[package]
name = "beaver"
version = "0.1.0"
authors = ["phs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*",features = ["full"]}
futures = "*"
log = "*"
env_logger = "*"
toml = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
bytes = "*"
uuid = {version = "0.8.1", features = ["v4"]}
thiserror = "1.0.13"
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
